[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
rustyline = { git = "https://github.com/libmonsoon-dev/rustyline", branch = "codecrafters-fix" }
anyhow = "1.0"
indexmap = "2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
